# llmcourse-hw3-turing

./: .env.example  .gitignore  DESIGN.md  PRD.md  README.md  SELF_ASSESSMENT.md  STATUS.md  TASKS.md  analysis_notebook.ipynb  pyproject.toml
config/: config.yaml
data/: base_sentences.txt  test_cases_20251126_133549.json
docs/: COST_ANALYSIS.md  EXTENSIBILITY.md  GUIDELINES_COMPLIANCE.md  TESTING_SUMMARY.md
results/analysis/: analysis_20251126_134420.csv  summary_20251126_134420.txt
results/translations/: translations_20251126_130143.json  translations_20251126_133549.json  translations_20251126_134420.json
skills/: en_to_fr.md  fr_to_he.md  he_to_en.md
src/: main.py
src/agents/: pipeline.py
src/analysis/: embeddings.py
src/input/: error_injector.py  generator.py
src/utils/: config.py
src/visualization/: plots.py
tests/: conftest.py  test_config.py  test_embeddings.py  test_error_injector.py  test_generator.py  test_pipeline.py
